--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<img src='datboi.gif' style="width: 100%">
+<!doctype html>
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<h1 class="title">
+    <div>Nicky Reid</div>
+    <br/>
+   <div> <a href="thesis/tinyp2p.html" ><img class="cat" src="./images/cat.png"></a></div>
+</h1>
+
+</body>
