--- a/index.html
+++ b/index.html
@@ -2,11 +2,27 @@
 <head>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 <h1 class="title">
     <div>Nicky Reid</div>
-    <br/>
-   <div> <a href="thesis/tinyp2p.html" ><img class="cat" src="./images/cat.png"></a></div>
 </h1>
+<div>
+    <p class="intro">
+        Software Developer living in Cape Town, South Africa.
+    </p>
+</div>
+
+
+<!--<img class="cat" src="./images/cat.png">-->
+<div>
+    <a href="thesis/tinyp2p.html" style=" text-decoration: none;">Bachelor of Science (Honours) Thesis</a>
+</div>
+<br/>
+<br/>
+<div>
+    <a href="https://github.com/nickyreid" style=" text-decoration: none;">Github</a>
+</div>
+
 
 </body>
