--- a/thesis/thesis-links.html
+++ b/thesis/thesis-links.html
@@ -5,14 +5,17 @@
 </head>
 <body>
 
-<div> <a href="tinyp2p.html" ><img class="cat" src="../images/back.png" style="margin-bottom: 35px"></a></div>
+<div style="text-align: left;"> <a href="tinyp2p.html" ><img class="back" src="../images/back.png" style="margin-bottom: 35px"></a></div>
 
 
-<center><font face="Trebuchet MS" size="18"><b>TinyP2P: A Decentralized </br>
+<center>
+
+    <h1>
+    TinyP2P: A Decentralized </br>
     User-Friendly
-    Peer-to-Peer File-Sharing System</b></font>
-    </br></br>
-    </br>
+    Peer-to-Peer <br/>
+    File-Sharing System
+</h1>
     <font face="Arial" size="4">
         <a href="Project%20Proposal.pdf" download="Project Proposal">Project Proposal</a></br>
         </br>
