add github project links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,27 @@
 <br/>
 <br/>
 <div>
+    <a href="https://github.com/NickyReid/fortunelyrics" style=" text-decoration: none;">FortuneLyrics
+        <br/>
+        <span style="font-size: 11px;color: #54f4ff78;">Random lyrics of your favourite songs</span>
+    </a>
+</div>
+<br/>
+<br/>
+<div>
+    <a href="https://github.com/NickyReid/lasthop" style=" text-decoration: none;">LastHop</a>
+    <br/>
+    <span style="font-size: 11px;color: #54f4ff78;">Your music stats for this day in history</span>
+</div>
+<br/>
+<br/>
+<div>
     <a href="https://github.com/nickyreid" style=" text-decoration: none;">Github</a>
+</div>
+<br/>
+<br/>
+<div>
+    <a href="https://www.linkedin.com/in/nicky-reid-b09255119/" style=" text-decoration: none;">Linkedin</a>
 </div>
 
 
