updated for lastfm-cli-tools

--- a/index.html
+++ b/index.html
@@ -21,17 +21,10 @@
 <br/>
 <br/>
 <div>
-    <a href="https://github.com/NickyReid/fortunelyrics" style=" text-decoration: none;">FortuneLyrics
+    <a href="https://github.com/NickyReid/lastfm-cli-tools" style=" text-decoration: none;">Last.fm cli tools
         <br/>
-        <span style="font-size: 11px;color: #54f4ff78;">Random lyrics of your favourite songs</span>
+        <span style="font-size: 11px;color: #54f4ff78;">A collection of python cli tools for personalised last.fm listening history and lyrics.</span>
     </a>
-</div>
-<br/>
-<br/>
-<div>
-    <a href="https://github.com/NickyReid/lasthop" style=" text-decoration: none;">LastHop</a>
-    <br/>
-    <span style="font-size: 11px;color: #54f4ff78;">Your music stats for this day in history</span>
 </div>
 <br/>
 <br/>
